--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                       <h3 class="animationStart mb-2 text-base">Web Developer</h3>
                       <a class="animationBtn mb-6 inline-block rounded border-2 border-neutral-50 px-6 pb-[6px] pt-2 text-xs font-medium uppercase text-neutral-50 transition duration-500 ease-in-out hover:bg-red-900 hover:border-red-900 hover:text-neutral-200"
                       data-twe-ripple-init
-                      data-twe-ripple-color="light" href="./public/images/Alesya Superfin.pdf" download="">Download cv</a>
+                      data-twe-ripple-color="light" href="./public/images/AlesyaSuperfinResume.pdf" download="">Download cv</a>
                     </div>
                 </div>
         </div>
